--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.12.0",
     "redux": "^5.0.1",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "vite": "latest",
+    "@vitejs/plugin-react": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -31,7 +33,6 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^latest"
+    "globals": "^16.5.0"
   }
 }
